// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SALTICAMStatistics Component Render the SALTICAMStatistics Component having populated props with no errors 1`] = `
<SALTICAMStatistics
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Detector mode
          </th>
          <th>
            Number of Proposals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            DRIFT SCAN
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            FRAME XFER
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            NORMAL
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            SLOT
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</SALTICAMStatistics>
`;

exports[`SALTICAMStatistics Component Render the SALTICAMStatistics Component having unpopulated props with no errors 1`] = `
<SALTICAMStatistics
  proposals={Array []}
>
  <div
    className="stat-item"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <table
      className="stat-table"
    >
      <thead>
        <tr>
          <th>
            Detector mode
          </th>
          <th>
            Number of Proposals
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            DRIFT SCAN
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            FRAME XFER
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            NORMAL
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            SLOT
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</SALTICAMStatistics>
`;
